# dataexplore

./: pyproject.toml  requirements.txt
env/: pyvenv.cfg
