[tool.poetry]
name = "dataexplore"
version = "0.1.0"
description = ""
authors = ["sudhindra <sudhindradesaitx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
